<resources>
    <string name="app_name">TestMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="movies">Movies</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_movies_list">Список избранных фильмов</string>
    <string name="movies_list">Список фильмов</string>
    <string name="clear_all">Очистить избранное</string>
    <string name="sorting_by">Сортировать по:</string>
    <string name="actors">Актёры</string>
    <string name="description">Описание</string>
    <string name="release_date">Дата выхода</string>
    <string name="rating">Рейтинг</string>
    <string name="actor_name">Имя актёра</string>
    <string name="actor_as_character">Персонаж</string>
    <string name="title">Название</string>
    <string name="list_is_empty">Список пуст</string>
</resources>